console updates specific to guvnor integration